--- a/CafeAutomationServer/appsettings.json
+++ b/CafeAutomationServer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    "Level3Db": "Data Source = localhost; Initial Catalog = cafeautomationapp; User ID = root; Password ="
+  }
 }
