--- a/CafeAutomationServer/CafeAutomationServer.csproj
+++ b/CafeAutomationServer/CafeAutomationServer.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CafeAutomationBLL\CafeAutomationBLL.csproj" />
+    <ProjectReference Include="..\CafeAutomationDAL\CafeAutomationDAL.csproj" />
   </ItemGroup>
 
 </Project>
