--- a/CafeAutomationServer/appsettings.json
+++ b/CafeAutomationServer/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": {
-    "Level3Db": "Data Source = localhost; Initial Catalog = cafeautomationapp; User ID = root; Password ="
-  }
+    "CafeAutomationDbase": "Data Source = localhost; Initial Catalog = cafeautomationapp; User ID = root; Password ="
+  },
 }
