--- a/CafeAutomationBLL/CafeAutomationBLL.csproj
+++ b/CafeAutomationBLL/CafeAutomationBLL.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CafeAutomationDAL\CafeAutomationDAL.csproj" />
+  </ItemGroup>
+
 </Project>
